// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImg Debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard "
>
  <img
    alt="Coffe Mug"
    className="productImg undefined"
    src="./coffe-mug.png"
  />
</div>
`;

exports[`ProductImg Debe de mostrar el componente correctamente con la imagen personalizado 1`] = `
<img
  alt="Coffe Mug"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
